@@ -32,7 +32,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Controls:WPFMessageBoxButtonsPanel}">
                     <DockPanel Background="{TemplateBinding Background}">
-                        <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
+                        <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" Margin="40,0,0,0">
                             <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_SingleOKButton" Visibility="Collapsed" />
 
                             <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.OK, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_OKButton" Visibility="Collapsed" />
@@ -42,6 +42,8 @@
                             <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Retry, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_RetryButton" Visibility="Collapsed" />
                             <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Cancel, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_CancelButton" Visibility="Collapsed" />
                             <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Ignore, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_IgnoreButton" Visibility="Collapsed" />
+                            
+                            <Controls:WPFMessageBoxButtonControl Content="{Binding Strings.Help, RelativeSource={RelativeSource TemplatedParent}}" x:Name="PART_HelpButton" Visibility="Collapsed" />
                         </StackPanel>
 
                         <Grid />
@@ -96,6 +98,12 @@
                             
                             <Setter TargetName="PART_RetryButton" Property="AutomationProperties.AutomationId" Value="4" />
                             <Setter TargetName="PART_CancelButton" Property="AutomationProperties.AutomationId" Value="2" />
+                        </Trigger>
+                        
+                        <Trigger Property="ShowHelpButton" Value="True">
+                            <Setter TargetName="PART_HelpButton" Property="Visibility" Value="Visible" />
+
+                            <Setter TargetName="PART_HelpButton" Property="AutomationProperties.AutomationId" Value="9" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
