@@ -1,4 +1,5 @@
-﻿using System.Windows.Media;
+﻿using System;
+using System.Windows.Media;
 
 namespace DW.WPFToolkit.Controls
 {
@@ -8,12 +9,17 @@ namespace DW.WPFToolkit.Controls
         {
             MessageCopyFormatter = new DefaultMessageCopyFormatter();
             ShowSystemMenu = false;
+            Icon = null;
             Strings = new MessageBoxStrings();
+            ShowHelpButton = false;
+            HelpRequestCallback = null;
         }
 
         public IMessageCopyFormatter MessageCopyFormatter { get; set; }
         public bool ShowSystemMenu { get; set; }
         public ImageSource Icon { get; set; }
         public MessageBoxStrings Strings { get; set; }
+        public bool ShowHelpButton { get; set; }
+        public Action HelpRequestCallback { get; set; }
     }
 }
